# rus-rs

./: Cargo.toml  LICENSE.md  README.md  Rocket.toml  payload.json  payload_bis.json
migrations/2024-01-08-133950_url/: down.sql  up.sql
src/: catchers.rs  main.rs  schema.rs
src/models/: mod.rs
src/service/: mod.rs
